# toninho-orquestrador-extracao-documentos

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTACAO.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  package.json  pyproject.toml  tailwind.config.js
.github/: CODEOWNERS  copilot-instructions.md
.github/instructions/: api-routes.instructions.md  e2e-tests.instructions.md  models-schemas.instructions.md  python-tests.instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  test.yml
docs/: API.md  ARCHITECTURE.md  README.md  TESTING.md  como-usar.md
docs/adr/: ADR-001-stack-tecnologico.md  ADR-002-processamento-assincrono.md  ADR-003-banco-de-dados.md  ADR-004-arquitetura-camadas.md  ADR-005-modulo-extracao.md  ADR-006-frontend.md  ADR-007-qualidade-software.md
docs/base/: inicio-projeto.md  pergunta-1.md
docs/demandas/: backlog.md  deploy-vps.md  extracao-docling.md
docs/diagramas/: arquitetura-fluxo-extracao.md
docs/discoverys/base/: inicio-projeto.md  pergunta-1.md
docs/discoverys/e2e-front/: casos_de_uso_e2e.md  inicio-notas.md
docs/discoverys/organizacao-projeto-v1-1/: notasV1.md
docs/discoverys/organizacao-projeto-v2/: discovery.md  prompt-execucao-prds.md
docs/discoverys/preparacao-suport-ia-agents/: descricao-pr.md  explicacao-do-que-foi-feito-ganhos.md  prompt-plan.md  proximos-passos.md
docs/discoverys/revisao-projeto-1/: revisao-projeto-1.md
docs/prd/: PRD-001-Setup-Projeto.md  PRD-002-Ambiente-Desenvolvimento.md  PRD-003-Models-Database.md  PRD-004-Schemas-DTOs.md  PRD-005-Modulo-Processo.md  PRD-006-Modulo-Configuracao.md  PRD-007-Modulo-Execucao.md  PRD-008-Modulo-Log.md  PRD-009-Modulo-Pagina-Extraida.md  PRD-010-Workers-Processamento-Assincrono.md  PRD-011-Sistema-Extracao.md  PRD-012-Monitoramento-Metricas.md  PRD-013-Testes-Qualidade.md  PRD-014-Setup-Frontend.md  PRD-015-Interface-CRUD-Processos.md  PRD-016-Interface-Monitoramento.md  PRD-017-Detalhes-Downloads.md  PRD-018-Integracao-Docling.md  PRD-019-implementacao-playwright-setup-infraestrutura.md  PRD-020-implementacao-playwright-crud-processos.md  PRD-021-implementacao-playwright-listagem-busca-processos.md  PRD-022-implementacao-playwright-dashboard-polling.md  PRD-023-implementacao-playwright-execucoes-ciclo-vida.md  PRD-024-implementacao-playwright-logs-sse-tempo-real.md  PRD-025-implementacao-playwright-paginas-notificacoes-navegacao.md  PRD-026-Modulo-Volume.md  PRD-DT-001-Correcao-Warnings-Deprecados.md  PRD-ORG-001-Atualizacao-README.md  PRD-ORG-002-Documento-Arquitetura.md  PRD-ORG-003-Documento-API.md  PRD-ORG-004-Documento-Testes.md  PRD-ORG-005-Index-Documentacao.md  PRD-ORG-006-Otimizacao-Docker.md  PRD-ORG-007-Teste-E2E-Formularios.md  PRD-ORG-008-Atualizacao-Backlog.md  impl-prd-018.md
docs/prd/prompts/: impl-prd-018.prompt.md  impl-prds-019-025-playwright-e2e.md
frontend/static/css/: output.css  styles.css  tailwind.css
frontend/static/js/: main.js
frontend/templates/: base.html
frontend/templates/components/: alert.html  modal.html  (+4 more)
migrations/: README.md  env.py
migrations/versions/: 20260301_1550_initial_schema.py  20260303_2221_add_celery_task_id_to_execucoes.py  20260303_2230_add_use_browser_to_configuracoes.py  20260312_add_metodo_extracao_to_configuracoes.py  20260322_add_respect_robots_txt_to_configuracoes.py  20260322_add_volumes_table.py
scripts/: coverage.sh  debug_detail.py  migrate.sh  run_dev.sh  run_tests.sh  setup.sh  shell.sh  start_beat.sh  start_flower.sh  start_worker.sh
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  test_download.py  test_smoke.py  test_uc01_criar_processo.py  test_uc02_validacao_formulario.py  test_uc03_editar_processo.py  test_uc04_busca_processos.py  test_uc05_executar_processo.py  test_uc06_deletar_processo.py  test_uc07_dashboard_polling.py  test_uc08_logs_sse.py  test_uc09_ciclo_vida_execucao.py  test_uc10_listagem_execucoes.py  test_uc11_paginas_extraidas.py  test_uc12_notificacoes.py  test_uc13_navegacao.py  test_uc14_erros_rede.py  test_uc15_formulario_pre_preenchido.py
tests/integration/: test_api.py  test_api_configuracoes.py  test_api_execucoes.py  test_api_logs.py  test_api_paginas_extraidas.py  test_api_processos.py  test_api_volumes.py  test_frontend.py  test_frontend_downloads.py  test_frontend_monitoring.py  test_frontend_processos.py  test_workers_docling.py
tests/unit/: test_config.py  test_configuracao_repository.py  test_configuracao_service.py  test_constants.py  test_exceptions.py  test_execucao_repository.py  test_execucao_service.py  test_integration_models_schemas.py  test_log_repository.py  test_log_service.py  test_models.py  test_pagina_extraida_repository.py  test_pagina_extraida_service.py  test_processo_repository.py  test_processo_service.py  test_schemas.py  test_volume_repository.py  test_volume_service.py
toninho/: main.py
toninho/api/: frontend.py
toninho/core/: config.py  constants.py  database.py  exceptions.py  logging.py
toninho/extraction/: __init__.py  browser_client.py  docling_extractor.py  extractor.py  http_client.py  markdown_converter.py  storage.py  utils.py
toninho/models/: README.md  __init__.py  base.py  configuracao.py  enums.py  execucao.py  log.py  pagina_extraida.py  processo.py  volume.py
toninho/monitoring/: __init__.py  health.py  metrics.py  websocket.py
toninho/repositories/: README.md  __init__.py  configuracao_repository.py  execucao_repository.py  log_repository.py  pagina_extraida_repository.py  processo_repository.py  volume_repository.py
toninho/schemas/: README.md  __init__.py  base.py  configuracao.py  execucao.py  log.py  pagina_extraida.py  processo.py  responses.py  validators.py  volume.py
toninho/services/: README.md  __init__.py  configuracao_service.py  execucao_service.py  log_service.py  pagina_extraida_service.py  processo_service.py  volume_service.py
toninho/workers/: README.md  __init__.py  celery_app.py  config.py  utils.py
(+61 files in other folders)
