[tool.poetry]
name = "toninho"
version = "0.1.0"
description = "Agente orquestrador de processos de extração de dados web"
authors = ["Victor Menegusso <victor@example.com>"]
readme = "README.md"
packages = [{include = "toninho"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
celery = "^5.3.6"
redis = "^5.0.1"
httpx = "^0.26.0"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.3"
python-multipart = "^0.0.6"
flower = "^2.0.1"
rich = "^13.7.0"
croniter = "^6.0.0"
html2text = "^2025.4.15"
beautifulsoup4 = "^4.14.3"
lxml = "^6.0.2"
docling = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
ruff = "^0.4.4"
mypy = "^1.10.0"
bandit = {version = "^1.7.8", extras = ["toml"]}
pip-audit = "^2.7.3"
pre-commit = "^3.6.0"
ipython = "^8.20.0"
ipdb = "^0.13.13"
respx = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
toninho = "toninho.main:cli"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in default arguments (FastAPI pattern)
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["toninho"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "B"]  # allow assert and some bugbear in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = [
    "B101",   # assert - usado em testes e validações internas
    "B110",   # try_except_pass - padrão intencional em código de limpeza
    "B112",   # try_except_continue - padrão intencional em loops de limpeza
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = [
    "misc",        # decorators on @property, generator return types
    "no-any-return",
    "union-attr",  # pre-existing: 'status' param shadows fastapi.status module in routes
    "attr-defined", # pre-existing: dict access on loosely-typed metrics return
    "return-value", # pre-existing: SQLAlchemy count() returns int | None vs int
    "arg-type",    # pre-existing: Pydantic model field type inference
    "assignment",  # pre-existing: object type inference in frontend
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["croniter.*", "celery.*", "flower.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=toninho --cov-report=html --cov-report=term-missing --cov-report=xml --cov-fail-under=90"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests (> 1s)",
    "requires_redis: Tests that require Redis",
    "requires_celery: Tests that require Celery workers"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning"
]

[tool.coverage.run]
source = ["toninho"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
